--- a/tfp/templates/base.html
+++ b/tfp/templates/base.html
@@ -34,7 +34,7 @@
                 {% if current_user.is_authenticated %}
                 <li id="account-dropdown" class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="true">
-                        <img class="rounded-circle navbar-img" src="{{ current_user.profile_pic_path }}" alt="Picture Not Found">
+                        <img class="rounded-circle navbar-img" src="{{ current_user.profile_pic_path }}" alt="Picture Not Found" height="25px" width="25px">
                         {{ current_user.username }}
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
