--- a/tfp/templates/account.html
+++ b/tfp/templates/account.html
@@ -1,3 +1,4 @@
+{% from "delete_msg.html" import delete_msg_template %}
 {% extends "base_home.html" %}
 {% block meta %}
     <meta name="Description" content="{{ config['APP_NAME'] }} account page">
@@ -71,26 +72,9 @@
         </form>
         <a class="btn btn-danger" href="#" data-toggle="modal" data-target="#delete-modal">Delete Account</a>
     </div>
-    <div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="delete-modal-label" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="delete-modal-label">Confirm account deletion?</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p>By confirming the deletion of your account, all your data will be excluded within {{ config['ACCOUNT_DELETE_INTERVAL'] }} hours.</p>
-                    <p>Before this takes effect, your deletion request can be undone through a detailed email that will be sent to you.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <form id="form-delete" method="POST" action="/account/delete">
-                        <input class="btn btn-danger" type="submit" value="Delete">
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+    {{ delete_msg_template('Confirm account deletion?', '''
+        <p>By confirming the deletion of your account, all your data will be excluded within ' + config['ACCOUNT_DELETE_INTERVAL']|string + ' hours.
+        <br><br>
+        Before this takes effect, your deletion request can be undone through a detailed email that will be sent to you.</p>
+    ''', '/account/delete') }}
 {% endblock content %}
