--- a/tfp/templates/admin/email.html
+++ b/tfp/templates/admin/email.html
@@ -1,4 +1,5 @@
 {% from "icons.html" import symbol %}
+{% from "delete_msg.html" import delete_msg_template %}
 {% extends "admin/home.html" %}
 {% block meta %}
     {{ super() }}
@@ -86,42 +87,8 @@
         {% endif %}
         {% endfor %}
     </div>
-    <div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="delete-modal-label" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="delete-modal-label">Confirm deletion?</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <form id="form-delete" method="POST" data-url-base="/admin/email/delete">
-                        <input class="btn btn-danger" type="submit" value="Delete">
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="delete-selected-modal" tabindex="-1" role="dialog" aria-labelledby="delete-modal-label" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="delete-selected-modal-label">Confirm deletion?</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <form id="form-delete-selected" method="POST" data-url-base="/admin/email/delete">
-                        <input class="btn btn-danger" type="submit" value="Delete">
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+    {{ delete_msg_template(confirm_msg='Confirm deletion?', url_base='/admin/email/delete') }}
+    {{ delete_msg_template(confirm_msg='Confirm deletion?', url_base='/admin/email/delete', id_container='delete-selected-modal', id_label='delete-selected-modal-label', id_form='form-delete-selected') }}
 {% endblock content %}
 {% block scripts %}
     {{ super() }}
