--- a/tfp/templates/admin/user.html
+++ b/tfp/templates/admin/user.html
@@ -1,3 +1,4 @@
+{% from "delete_msg.html" import delete_msg_template %}
 {% from "icons.html" import symbol %}
 {% extends "admin/home.html" %}
 {% block meta %}
@@ -78,22 +79,5 @@
         {% endif %}
         {% endfor %}
     </div>
-    <div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="delete-modal-label" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="delete-modal-label">Confirm deletion?</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <form id="form-delete" method="POST" data-url-base="/admin/user/delete">
-                        <input class="btn btn-danger" type="submit" value="Delete">
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+    {{ delete_msg_template(confirm_msg='Confirm deletion?', url_base='/admin/user/delete') }}
 {% endblock content %}
