--- a/tfp/templates/home.html
+++ b/tfp/templates/home.html
@@ -1,3 +1,4 @@
+{% from "delete_msg.html" import delete_msg_template %}
 {% extends "base_home.html" %}
 {% block meta %}
     <meta name="Description" content="{{ config['APP_NAME'] }} main page">
@@ -55,24 +56,7 @@
             </div>
         </article>
     </template>
-    <div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="delete-modal-label" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="delete-modal-label">Confirm post deletion?</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <form id="form-delete" method="POST" data-url-base="/post/delete">
-                        <input class="btn btn-danger" type="submit" value="Delete">
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+    {{ delete_msg_template(confirm_msg='Confirm post deletion?', url_base='/post/delete') }}
 {% endblock content %}
 {% block scripts %}
     <script src="{{ url_for('static', filename='js/home.js') }}" type="text/javascript"></script>
