--- a/tfp/templates/admin/role.html
+++ b/tfp/templates/admin/role.html
@@ -33,7 +33,7 @@
                             <a class="cell-link" href="{{ url_for('admin_role_route.edit_role', name=role.name) }}"><svg class="icon"><use xlink:href="#icon-pen" /></svg>Edit</a>
                         </td>
                         <td class="cell-center cell-icon">
-                            <a class="cell-link" href="#" data-toggle="modal" data-target="#delete-modal" data-row-id="{{ role.name }}"" data-msg-id="&quot;{{ role.name }}&quot; role"><svg class="icon"><use xlink:href="#icon-trash" /></svg>Delete</a>
+                            <a class="cell-link" href="#" data-toggle="modal" data-target="#delete-modal" data-row-id="{{ role.name }}" data-msg-id="&quot;{{ role.name }}&quot; role"><svg class="icon"><use xlink:href="#icon-trash" /></svg>Delete</a>
                         </td>
                         <td>{{ role.id }}</td>
                         <td>{{ role.name }}</td>
