--- a/tfp/static/css/navbar.css
+++ b/tfp/static/css/navbar.css
@@ -70,19 +70,19 @@
 }
 
 @media (max-width: 991px) {
-    .show .account-container {
+    .account-container {
         margin-left: 0;
         margin-right: 0;
     }
 
-    #navbarSupportedContent.show .dropdown-menu {
+    #navbarSupportedContent .dropdown-menu {
         position: absolute;
         left: auto;
         right: auto;
         top: 95%;
     }
 
-    #navbarSupportedContent.show .separator {
+    #navbarSupportedContent .separator {
         display: none;
     }
 }
