Add pip-tools and others
- Add more complete gitignore rules
- Fix copy
- Fix bug in user model

--- a/tfp/templates/home.html
+++ b/tfp/templates/home.html
@@ -25,7 +25,7 @@
     <template id="no-post-template">
         {% if not author %}
         <div class="container-msg">
-            <p>No post written yet</p>
+            <p>No posts so far</p>
         </div>
         {% endif %}
     </template>
